# ixx

./: .envrc  .gitignore  .rustfmt.toml  Cargo.toml  README.md  flake.nix  index.ixx  ixx02.hexpat  lockfile.nix
.github/: copilot-instructions.md  dependabot.yml  renovate.json
.github/workflows/: ci.yaml
fixx/: Cargo.toml  derivation.nix
fixx/pkg/: fixx.js
fixx/src/: lib.rs
ixx/: Cargo.toml  derivation.nix
ixx/src/: args.rs  main.rs  option.rs  package.rs
ixx/src/action/: index.rs  meta.rs  mod.rs  search.rs
ixx/src/action/index/: mod.rs  options.rs  packages.rs
ixx/src/utils/: highlight.rs  mod.rs
libixx/: Cargo.toml  derivation.nix  index.nuscht
libixx/benches/: search.rs
libixx/src/: error.rs  hash.rs  index.rs  levenshtein.rs  lib.rs  option.rs  package.rs  string_view.rs
libixx/src/test/: get_idx_by_name.rs  mod.rs  options.json  search.rs
