[package]
name = "ixx"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/NuschtOS/ixx/"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
libixx = { path = "../libixx" }
markdown = "1.0.0-alpha.21"
serde_json = "1.0"
anyhow = "1.0"

syntect = "5.2"
