[package]
name = "ixx"
version = "0.0.0-git"
edition = "2021"
repository = "https://github.com/NuschtOS/ixx/"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
libixx = { path = "../libixx" }
markdown = "1.0.0-alpha.21"
serde_json = "1.0"
anyhow = "1.0"

tree-sitter-highlight = "0.25"
# when updating commit, also update HIGHLIGHT_NAMES in highlight.rs
tree-sitter-nix = { git = "https://github.com/nix-community/tree-sitter-nix", rev = "4b952d99ce6fc795ff3cfa48b05637f2b1751d3b" }
