[package]
name = "ixx"
version = "0.0.0-git"
edition = "2024"
repository = "https://github.com/NuschtOS/ixx/"
license = "MIT OR Apache-2.0"

[dependencies.tokio]
version = "1.48"
default-features = false
features = ["macros", "rt-multi-thread", "fs", "io-util"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
libixx = { path = "../libixx" }
markdown = "1.0"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.5", features = ["serde"] }

tree-sitter-highlight = "0.25"
# when updating commit, also update HIGHLIGHT_NAMES in highlight.rs
tree-sitter-nix = "0.3.0"
