[package]
name = "libixx"
version = "0.0.0-git"
edition = "2021"
repository = "https://github.com/NuschtOS/ixx/"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
thiserror = "2.0"
binrw = "0.15"

[dev-dependencies]
serde_json = "1.0"
