[package]
name = "libixx"
version = "0.0.0-git"
edition = "2024"
repository = "https://github.com/NuschtOS/ixx/"
license = "MIT OR Apache-2.0"

[lib]
bench = true

[dependencies]
binrw = "0.15"
levenshtein = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
url = { version = "2.5", features = ["serde"] }
lzma-rust2 = { version = "0.16", default-features = false, features = [
  "std",
  "xz",
  "encoder",
] }

[dev-dependencies]
serde_json = "1.0"
criterion = "0.8"

[[bench]]
name = "search"
harness = false
